feat(catalog/infra): 实现 OpenAlex 数据源适配器和 Spring Batch 批处理组件
数据源适配器：
- VenueSourceFileAdapter: 实现 VenueSourceFilePort，支持缓存优先策略
- OpenAlexManifestParser: 解析 OpenAlex S3 manifest JSON
- OpenAlexSourceParser: 解析 gzip 压缩的 JSONL 源文件

Spring Batch 组件：
- VenueImportItemReader: 多文件顺序读取，支持断点续传
- VenueImportItemWriter: Upsert 写入策略（Venue + Identifier + Metrics）
- VenueImportJobConfig: Job/Step/Listener 配置

持久化扩展：
- VenueMapper/VenueIdentifierMapper/VenueMetricsMapper: 添加 upsert 和 truncate 方法